# algorithms-msc-hse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
homework_1/palindrome/: is_palindrome.py  test_is_palindrome.py
homework_1/prime/: count_primes.py  test_count_primes.py
homework_1/sum/: max_even_sum.py  test_max_even_sum.py
homework_10/knuth_morris_pratt/: kmp_explanation.ipynb  knuth_morris_pratt.py  test_knuth_morris_pratt.py
homework_10/longest_common_subsequence/: lcs.py  test_lcs.py
homework_10/rabin_karp/: rabin_karp.py  rolling_hash_explanation.ipynb  test_rabin_karp.py
homework_2/merge_lists/: merge_lists.py  test_merge_lists.py
homework_2/stack_vs_queue/: stack_n_queue.py  test_queue.py  test_stack.py
homework_2/validate/: test_validate.py  validate.py
homework_3/anagrams/: group_anagrams.py  test_group_anagrams.py
homework_3/hash_table/: hash_table.py  test_hash_table.py
homework_3/two_sum/: sum_ids_search.py  test_sum_ids_search.py
homework_4/balance/: balance.py  test_balance.py
homework_4/bst_w_traversals/: bst.py  test_traversals.py
homework_4/validate/: test_validate.py  validate.py
homework_5/avl_bst/: avl.py  test_avl.py
homework_5/permutations/: permutations.py  test_permutations.py
homework_5/tracer/: tracer.py
homework_6/compare_n_iterative/: sort.py  test_sort.py  timeit.py
homework_6/quick_select/: kth_elem.py  test_kth_elem.py
homework_7/makeheap/: makeheap.py  test_makeheap.py
homework_9/dag/: dag.py  test_dag.py
homework_9/dijkstra/: dijkstra.py  test_dijkstra.py
(+2 files in other folders)
